# day-day-up

./: LICENSE  README.md
code/design_patterns/: CMakeLists.txt  build_design_patterns.sh
code/design_patterns/creational/abstract_factory/: README.md  abstract_factory.cpp  abstract_factory.h  demo.cpp
code/design_patterns/creational/builder/: README.md  builder.cpp  builder.h  demo.cpp
code/design_patterns/creational/factory_method/: README.md  demo.cpp  factory_method.cpp  factory_method.h
code/design_patterns/creational/prototype/: README.md  demo.cpp  prototype.cpp  prototype.h
code/design_patterns/creational/simple_factory/: README.md  demo.cpp  simple_factory.cpp  simple_factory.h
code/design_patterns/creational/singleton/: CMakeLists.txt  README.md  demo.cpp  singleton.cpp  singleton.h
code/design_patterns/structural/adapter/: README.md  adapter.h  demo.cpp
code/design_patterns/structural/bridge/: README.md  bridge.h  demo.cpp
code/design_patterns/structural/composite/: README.md
